--- a/template toy/practical c++ metaprogramming/Readme
+++ b/template toy/practical c++ metaprogramming/Readme
@@ -1,2 +1,2 @@
 this file is code practice from the book "practical c++ metaprogramming"
-write this after i read the book.
+write this after i read the book. all code has been test on vs2019.
